2009-07-18

  Bugfixes for "fchk" command, graphics_.cpp file(s) compilation. [Mion]


2009-07-12

  bugfixes for non-MMX/SSE2 graphics routines, button handling (again),
  textwindow (non)display on CTRL-press. [Mion]

  Removed drawing a z-order sprite in front of the tachie but behind
  the textwindow in windowback mode (can use extended sprites instead). [Mion]

  Removed the 2009-06-14 fix that disallowed numerals after the asterisk
  in label names (NScr doesn't obey its own rule, why should we?) [Mion]


2009-06-27

  Button bugfix. [Mion]


2009-06-23

  Changed "wait" command to do an actual timed wait even in ctrl/skip mode,
  just for a reduced duration. [Mion]

  Added command "savedir". [Mion]


2009-06-21

  Fix for rain effect on PPC. [Mion, Roto]

  Added Altivec graphics routines. [Mion, Roto]

  Added SSE2 alphablend graphics routine. [Mion]


2009-06-17

  Fix for PPC ogg file playback (with bgm volume < 100). [Mion]


2009-06-14

  Moved SSE2/MMX graphics routines to separate files. [Mion]

  Various bugfixes, mainly a syntax fix to disallow numerals
  after the * in label names (as it should). [Mion]


2009-06-11

  Added SSE2/MMX graphics routines and removed sdl_gfx library. [Roto, Mion]

  Added additive and subtractive alpha blending modes. [Mion]

  Added commands "lsp2add", "lsph2add", "lsp2sub", "lsph2sub". [Mion]


2009-06-09

  Bugfixes; added support for sdl_gfx library. [Mion]

  Also experimental graphics routines using SSE2. [Roto, Mion]


2009-05-29

  Added commands "menu_click_def", "menu_click_page", "minimizewindow",
  "strsph", "textspeeddefault"; bugfix for Mac text output. [Mion]


2009-04-27

  Support for opening non-ASCII Japanese filenames in Windows,
  even without Japanese locale. [Mion]


2009-04-19

  Fully-functional "movie" command, including async & pos options.
  May be buggy. [Mion]


2009-04-17

  Incorporated insani's suggested "chvol" fix, redid "mp3fadeout",